# datlino

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml
assets/mascot/: .gitkeep
docs/: IPAD.md  SIGNING.md
fixtures/cz/: anglictina-prezent-perfekt.md  biologie-fotosynteza.md  cestina-pravopis.md  chemie-periodicka-soustava.md  dejepis-habsburkove.md  fyzika-mechanika.md  geografie-evropa.md  literatura-narodni-obrozeni.md  literatura-vrchlicky.md  matematika-derivace.md  matematika-goniometrie.md  nemcina-perfektum.md  zsv-demokracie.md
research/forum/: session-001.md
research/interviews/: eliska.md  filip.md  jonas.md  lucie.md  martin.md  paja.md  synthesis.md  tereza.md
research/market/: market-scan.md  positioning.md
research/personas/: enriched.md
research/plan/: BACKLOG.md  votes.json
research/playwright/: playwright.config.ts
research/playwright/fixtures/: mock-tauri.ts  observations.ts
research/playwright/specs/: about.spec.ts  claude-sub.spec.ts  eliska-feedback.spec.ts  eliska.spec.ts  filip.spec.ts  jonas.spec.ts  lucie.spec.ts  martin.spec.ts  paja.spec.ts  tereza.spec.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: claude_auth.rs  curriculum.rs  db.rs  embeddings.rs  fsrs.rs  ingest.rs  lessons.rs  lib.rs  main.rs  ocr.rs  pedagogy.rs  progress.rs  rephrase.rs  search.rs  segmenter.rs  session.rs  watcher.rs
src-tauri/tests/: fixtures_smoke.rs  personas.rs  personas_advanced.rs  personas_beginner.rs  personas_typing.rs
src/lib/: CopyPasteRephraseModal.svelte  FeedbackCard.svelte  Keyboard.svelte  api.ts  flywheel.ts  keyboard-layout.ts  mode-meta.ts  profile.svelte.ts  session-store.svelte.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/learn/: +page.svelte
src/routes/practice/: +page.svelte
src/routes/practice/intro/: +page.svelte
src/routes/practice/session/: +page.svelte
src/routes/practice/summary/: +page.svelte
src/routes/progress/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/study/: +page.svelte
