[package]
name = "datlino"
version = "0.1.0"
description = "Datlino — touch-typing trainer for Czech and Slovak high school students"
authors = ["Paja Dravec"]
edition = "2021"
rust-version = "1.77"
license = "UNLICENSED"

# The library carries the actual logic so it can be unit-tested without
# pulling in Tauri's GUI runtime. `main.rs` is just the binary shim that
# starts the Tauri runtime.
[lib]
name = "datlino_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage: bundled SQLite so the `sqlite-vec` virtual table and
# load_extension work on every platform without a system build. FTS5 is
# bundled too.
rusqlite = { version = "0.31", features = ["functions", "bundled", "load_extension"] }
sqlite-vec = "0.1"
bytemuck = { version = "1", features = ["derive"] }

# Ingestion + watching
notify = "6"
sha2 = "0.10"
pdf-extract = "0.7"

# Embedding cloud HTTP (BYOK). ureq kept blocking + tiny.
ureq = { version = "2", features = ["json", "tls"] }
keyring = "2"

# Local embeddings — Candle, HuggingFace's pure-Rust ML stack. Feature-flagged
# because these crates are heavy (several minutes of first-compile) and add
# ~15 MB to the binary. The brief §5.3 names multilingual-e5-small as the
# local model; it's ~120 MB of weights downloaded on first use via hf-hub.
candle-core = { version = "0.7", optional = true }
candle-nn = { version = "0.7", optional = true }
candle-transformers = { version = "0.7", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig", "http"], optional = true }
hf-hub = { version = "0.3", optional = true }

# Segmenter
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"

# Dates (for streak day-math — tiny without default features)
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Errors
anyhow = "1"
thiserror = "1"

# Small tempfile usage at runtime for OCR rasterisation.
tempfile = "3"

[dev-dependencies]

[features]
# By default Tauri uses a custom protocol on Windows. Keep this off until
# we explicitly need it.
custom-protocol = ["tauri/custom-protocol"]

# Enable local (on-device) embeddings via Candle + multilingual-e5-small.
# Opt-in because the Candle crates take several minutes to compile on
# first build. Trigger with: `cargo build --features candle`.
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]
